Bug 288395 - [Dolphin2] Font settings don't work.
Summary: [Dolphin2] Font settings don't work.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: junior-jobs, regression
Depends on:
Blocks:
 
Reported: 2011-12-07 11:53 UTC by Alejandro Nova
Modified: 2011-12-08 22:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro Nova 2011-12-07 11:53:20 UTC
Version:           unspecified
OS:                Linux

Settings | Preferences of Dolphin... | Visualization modes.

When I try to set a font for icons, in any visualization mode, that doesn't work.

Reproducible: Always

Steps to Reproduce:
1. Get to the dialog box mentioned.
2. Try to change the icon font for any visualization mode.

Actual Results:  
The default system font is used, my setting is ignored.

Expected Results:  
The font I configured is used.
Comment 1 Peter Penz 2011-12-07 12:18:49 UTC
Thanks for the report. This should be easy to fix and will be done during the next days...
Comment 2 A JANARDHAN REDDY 2011-12-07 15:25:31 UTC
Hi,
I have gone through the bug, after we select required font in settings, the settings are written using writeconfig function of kconfigskeleton, which can be retrieved later, i didn't see any code to set font of view(qstyleoptionviewitemv4 is initialized from parent widget) but i didn't see any function to set font. So can i write a new function
(In reply to comment #1)
> Thanks for the report. This should be easy to fix and will be done during the
> next days...
Comment 3 Alejandro Nova 2011-12-07 20:30:50 UTC
Widening. The "Icon Spacing" option also doesn't work.
Comment 4 Peter Penz 2011-12-08 22:10:59 UTC
Git commit 5c10741d41ace77ec054a1f2e7e3ba0cbca9bcf3 by Peter Penz.
Committed on 08/12/2011 at 23:08.
Pushed by ppenz into branch 'master'.

Fix font settings issue

The font settings have been ignored currently because of the transition to the new view-engine.

The patch is based on the work of Janardhan Reddy and has been extended by the helper class ViewModeSettings.

BUG: 288395
FIXED-IN: 4.8.0

M  +3    -0    dolphin/src/CMakeLists.txt
M  +5    -5    dolphin/src/kitemviews/kfileitemlistwidget.cpp
A  +141  -0    dolphin/src/settings/viewmodes/viewmodesettings.cpp     [License: GPL (v2+)]
C  +32   -27   dolphin/src/settings/viewmodes/viewmodesettings.h [from: dolphin/src/settings/viewmodes/viewsettingstab.h - 060% similarity]
M  +47   -71   dolphin/src/settings/viewmodes/viewsettingstab.cpp
M  +3    -0    dolphin/src/settings/viewmodes/viewsettingstab.h
M  +48   -30   dolphin/src/views/dolphinitemlistcontainer.cpp
M  +9    -0    dolphin/src/views/dolphinitemlistcontainer.h
M  +1    -17   dolphin/src/views/dolphinview.cpp
M  +0    -8    dolphin/src/views/dolphinview.h

http://commits.kde.org/kde-baseapps/5c10741d41ace77ec054a1f2e7e3ba0cbca9bcf3